# django-simple-timeseries

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  manage.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: lint.yml  publish.yml  test.yml
src/django_simple_timeseries/: __init__.py  apps.py  forms.py  models.py  timeseries.py
tests/: admin.py  models.py  settings.py  test_model_field.py  test_timeseries.py
tests/migrations/: 0001_initial.py
