[tool.poetry]
name = "django-simple-timeseries"
version = "0.2.0"
description = ""
authors = ["mike wakerly <opensource@hoho.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
tox = "^3.25.0"
pytest-django = "^4.5.2"
freezegun = "^1.2.1"
setuptools = "^62.1.0"
tox-gh-actions = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.8", "setuptools"]
build-backend = "poetry.core.masonry.api"
