[tool.poetry]
name = "django-simple-timeseries"
version = "0.2.0"
description = ""
authors = ["mike wakerly <opensource@hoho.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
tox = "^4.6.3"
pytest-django = "^4.5.2"
freezegun = "^1.2.2"
setuptools = "^68.0.0"
tox-gh-actions = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
