[tool.poetry]
name = "django-simple-timeseries"
version = "0.3.0"
description = ""
authors = ["mike wakerly <opensource@hoho.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
tox = "^4.15.0"
pytest-django = "^4.8.0"
freezegun = "^1.5.1"
setuptools = "^70.0.0"
tox-gh-actions = "^3.2.0"
ruff = "^0.11.8"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = 'py313'
exclude = [
  ".git",
  "node_modules",
  ".pyenv",
  ".vscode",
  ".tox",
  "migrations"
]

[tool.ruff.format]
quote-style = 'preserve'

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    #"B",
    # flake8-simplify
    #"SIM",
    # isort
    "I",
]
