[metadata]
name = django-simple-timeseries
version = 0.3.0
description = Simple timeseries data type and field.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mik3y/django-simple-timeseries
author = mik3y
author_email = opensource@hoho.com
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3 :: Only
keywords = django timeseries
platforms =
    any

[options]
packages = find:
package_dir = =src
install_requires =
    Django>=4.2
python_requires = >=3.12

[options.packages.find]
where = src

[coverage:paths]
source =
   src
   .tox/*/site-packages

[coverage:run]
branch = True
include = */django_simple_timeseries/*
parallel = True

[coverage:report]
show_missing = True

[flake8]
exclude = .tox,venv
ignore = W503,W504
max_line_length = 99

[isort]
combine_as_imports = True
default_section = THIRDPARTY
force_grid_wrap = 0
include_trailing_comma = True
known_third_party = Django
known_first_party = django_simple_timeseries
line_length = 99
multi_line_output = 3
skip = .tox,venv
use_parentheses = True
